# haskell-minisat

./: .gitignore  .travis.yml  COPYING  MiniSat2.cabal  README.md
cbits/: Solver.h  hsminisat.cxx
cbits/core/: SolverTypes.h
cbits/utils/: ParseUtils.h
samples/: Test.hs
src/: MiniSat2.hs  Test.hs
