Name:           MiniSat2
Version:        0.0.3
Cabal-Version:  >= 1.6
License:        BSD3
License-File:   COPYING
Author:         Masahiro Sakai
Maintainer:     Masahiro Sakai <masahiro.sakai@gmail.com>
Category:       Algorithms
Synopsis:       MiniSat2 wrapper
Description:    Low-level MiniSat2 wrapper
Stability:      experimental
Build-Type:	Simple
Extra-Source-Files: cbits/Alg.h cbits/BasicHeap.h cbits/BoxedVec.h cbits/Heap.h cbits/Map.h cbits/Queue.h cbits/Solver.h cbits/SolverTypes.h cbits/Sort.h cbits/Vec.h samples/Test.hs

Source-Repository head
  type:     git
  location: git://github.com/msakai/haskell-minisat.git

Library
  Build-Depends:      base >=4 && <5, array
  Hs-Source-Dirs:     src
  Exposed-Modules:    MiniSat2
  GHC-Options:        -Wall
  Extensions:         ForeignFunctionInterface GeneralizedNewtypeDeriving
  C-Sources:          cbits/Solver.cxx cbits/hsminisat.cxx
  Include-Dirs:       cbits
  Extra-Libraries:    stdc++
