Name:           MiniSat2
Version:        0.0.5
Cabal-Version:  >= 1.8
License:        BSD3
License-File:   COPYING
Author:         Masahiro Sakai
Maintainer:     Masahiro Sakai <masahiro.sakai@gmail.com>
Category:       Algorithms
Synopsis:       MiniSat2 wrapper
Description:    Low-level MiniSat2 wrapper
Stability:      experimental
Build-Type:	Simple
Extra-Source-Files:
  cbits/core/*.h
  cbits/mtl/*.h
  cbits/utils/*.h
  samples/Test.hs
  minisat/*
  minisat/doc/*

Source-Repository head
  type:     git
  location: git://github.com/msakai/haskell-minisat.git

Library
  Build-Depends:      base >=4 && <5, array >=0.4.0.0
  Hs-Source-Dirs:     src
  Exposed-Modules:    MiniSat2
  GHC-Options:        -Wall
  Extensions:         ForeignFunctionInterface GeneralizedNewtypeDeriving
  C-Sources:
     cbits/core/Solver.cc
     cbits/utils/Options.cc
     cbits/hsminisat.cxx
  CC-Options:         -Wall -Wno-parentheses -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS
  Include-Dirs:       cbits
  Extra-Libraries:    stdc++

Test-suite Test
  Type:               exitcode-stdio-1.0
  HS-Source-Dirs:     test
  Main-is:            Test.hs
  Build-depends:      base >=4 && <5, array, MiniSat2, test-framework, test-framework-hunit, HUnit
